# sol_verify

./: README.md
client/: Cargo.toml
client/src/: main.rs  state.rs
docker/: build.sh  extract.perl  run.sh  stop.sh
program/: Cargo.toml  README.md
program/src/: accounts.rs  instruction.rs  processor.rs  state.rs  utils.rs
python/: .gitignore  codes.py  rpc_funcs.py  sig_streamer.py  state.py  transactions.py
