[package]
name = "solana_rust_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-sdk = "1.10.23"
solana-client = "1.10.23"
solana-program = "1.10.21"
borsh = "0.9.3"
thiserror = "1.0.24"
solana-transaction-status = "1.10.26"
bincode = "1.3.3"
solana-security-txt = {version = "1.0.1", features = ["parser"] }
twoway = { version = "=0.2.2"}
sha2 = "0.10.2"
serde = "1.0.145"
serde_json = "1.0.59"
